Fix for the bug #2235: mysqldump --compatible doesn't work correctly.